--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="play">Play</string>
     <string name="singleplayer">Singleplayer</string>
     <string name="multiplayer">Multiplayer</string>
+    <string name="create_new_room">Create new room</string>
+    <string name="connect_to_existing_room">Connect to existing room</string>
 </resources>
